--- a/index.html
+++ b/index.html
@@ -1,45 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    가 정
-                                                               - 박목월 - 
+    티백
   </head>
   <body>
-    <h1>
-지상에는
-아홉 켤레의 신발
-아니 현관에는 아니 들깐에는
-아니 어느 시인의 가정에는
-알전등이 켜질 무렵을
-문수가 다른 아홉 켤레의 신발을.
- 
-내 신발은
-십 구문 반
-눈과 얼음의 길을 걸어
-그들 옆에 벗으면,
-육문 삼의 코가 납짝한
-귀염둥아 귀염둥아
-우리 막내둥아
- 
-미소하는
-내 얼굴을 보아라
-얼음과 눈으로 벽을 짜올린
-여기는
-지상
-연민한 삶의 길이여
-내 신발은 십구문 반.
- 
-아랫목에 모인
-아홉 마리의 강아지야
-강아지 같은 것들아
-굴욕과 굶주림과 추운 길을 걸어
-내가 왔다.
-아버지가 왔다.
-아니 십구문 반의 신발이 왔다.
-아니 지상에는
-아버지라는 어설픈 것이
-존재한다
-미소하는
- 내 얼굴을 보아라.</h1>
+    <h1>생각하면 할수록</h1>
+    <h1>곱씹으면 곱씹을수록</h1>
+    <h1>말하면 할수록 짙어지는게</h1>
+    <div></div>
+    <h1>너무 진하게 우려내</h1>
+    <h1>그 향이 코끝을 스치는게 </h1>
+    <div></div>
+    <h1>내 마음 같아서</h1>
   </body>
 </html>
