--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    티백
+    <h1>티백</h1>
   </head>
   <body>
-    <h1>생각하면 할수록</h1>
-    <h1>곱씹으면 곱씹을수록</h1>
-    <h1>말하면 할수록 짙어지는게</h1>
+    <p>생각하면 할수록</p>
+    <p>곱씹으면 곱씹을수록</p>
+    <p>말하면 할수록 짙어지는게</p>
     <div></div>
-    <h1>너무 진하게 우려내</h1>
-    <h1>그 향이 코끝을 스치는게 </h1>
+    <p>너무 진하게 우려내</p>
+    <p>그 향이 코끝을 스치는게 </p>
     <div></div>
-    <h1>내 마음 같아서</h1>
+    <p>내 마음 같아서</p>
   </body>
 </html>
