--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <h4>티백</h4>
   </head>
   <body>
-    <p>생각하면 할수록</p>
-    <p>곱씹으면 곱씹을수록</p>
-    <p>말하면 할수록 짙어지는게</p>
-    <div></div>
-    <p>너무 진하게 우려내</p>
-    <p>그 향이 코끝을 스치는게 </p>
-    <div></div>
-    <p>내 마음 같아서</p>
+    <div id="section">
+     <p>생각하면 할수록</p>
+     <p>곱씹으면 곱씹을수록</p>
+     <p>말하면 할수록 짙어지는게</p>
+     <div></div>
+     <p>너무 진하게 우려내</p>
+     <p>그 향이 코끝을 스치는게 </p>
+     <div></div>
+     <p>내 마음 같아서</p>
+    </div>
   </body>
 </html>
