--- a/index.html
+++ b/index.html
@@ -1,18 +1,77 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>티백</title>
+
+  <!-- Google Fonts: Serif 스타일로 변경 -->
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Serif+KR&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Nanum Myeongjo', 'Noto Serif KR', serif;
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .card {
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      width: 90%;
+      padding: 2rem;
+      box-sizing: border-box;
+      text-align: center;
+    }
+
+    .card h4 {
+      margin-top: 0;
+      font-size: 1.8rem;
+      color: #333;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 0.5rem;
+    }
+
+    .card p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #444;
+      margin: 1rem 0;
+    }
+
+    @media (max-width: 480px) {
+      .card {
+        padding: 1rem;
+      }
+
+      .card h4 {
+        font-size: 1.5rem;
+      }
+
+      .card p {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
     <h4>티백</h4>
-  </head>
-  <body>
-    <div id="section">
-     <p>생각하면 할수록</p>
-     <p>곱씹으면 곱씹을수록</p>
-     <p>말하면 할수록 짙어지는게</p>
-     <div></div>
-     <p>너무 진하게 우려내</p>
-     <p>그 향이 코끝을 스치는게 </p>
-     <div></div>
-     <p>내 마음 같아서</p>
-    </div>
-  </body>
+    <p>생각하면 할수록</p>
+    <p>곱씹으면 곱씹을수록</p>
+    <p>말하면 할수록 짙어지는게</p>
+    <div></div>
+    <p>너무 진하게 우려내</p>
+    <p>그 향이 코끝을 스치는게</p>
+    <div></div>
+    <p>내 마음 같아서</p>
+  </div>
+</body>
 </html>
